--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,6 +24,7 @@
 <script type="text/javascript">
     var context = "";
 </script>
+<script src="/js/swiper.min.js" type="text/javascript"></script>
 <script src="/js/out/goog/base.js" type="text/javascript"></script>
 <script src="/js/app.js" type="text/javascript"></script>
 <script type="text/javascript">
