--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -8,15 +8,14 @@
 
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/app.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
+    <link href="css/app.css?v=5" rel="stylesheet">
 
 </head>
 <body>
 
 <div id="app">
     <div class="loading">
-        <p>加载中……</p>
+        <p><i class="icon-spinner spin"></i></p>
     </div>
 </div>
 
@@ -24,9 +23,9 @@
 <script type="text/javascript">
     var context = "";
 </script>
-<script src="/js/swiper.min.js" type="text/javascript"></script>
+<script src="/js/iscroll-lite.js" type="text/javascript"></script>
 <script src="/js/out/goog/base.js" type="text/javascript"></script>
-<script src="/js/app.js" type="text/javascript"></script>
+<script src="/js/app.js?v=2" type="text/javascript"></script>
 <script type="text/javascript">
     goog.require("pingtai.app");
 </script>
