--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>北流微信商业中心</title>
 
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/app.css?v=5" rel="stylesheet">
+    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/app.css?v=6" rel="stylesheet">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 </script>
 <script src="/js/iscroll-lite.js" type="text/javascript"></script>
 <script src="/js/out/goog/base.js" type="text/javascript"></script>
-<script src="/js/app.js?v=2" type="text/javascript"></script>
+<script src="/js/app.js" type="text/javascript"></script>
 <script type="text/javascript">
     goog.require("pingtai.app");
 </script>
