加入一些商店页面

--- a/Public/mygoods.html
+++ b/Public/mygoods.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
-    <link href="css/shop.css?v=5" rel="stylesheet" type="text/css">
+    <link href="css/shop.css?v=7" rel="stylesheet" type="text/css">
 
 </head>
 <body>
@@ -21,9 +21,13 @@
         <div class="box">
             <h3 class="text-center orange-text main-size">米李和杨梅</h3>
             <div class="small-text">
-                夏日炎炎，躲在家里看电视的你，是不是觉得很口渴呢？<br>
-                黄伯亲手为您腌制了米李和杨梅，让您一边看着电视，一边为您清一清夏天的虚火。
+                夏日炎炎，躲在家里看电视的你是不是觉得很口渴呢？<br>
+                黄伯亲手为您腌制了米李和杨梅，让您一边看着电视，一边为您清一清夏天的虚火。（北流市区）
             </div>
+            <p class="">
+                <span class="small-text"><i class="iconfont green-text">&#xe60d;</i> 企业认证</span>
+                <span class="small-text"><i class="iconfont green-text">&#xe60d;</i> 担保交易</span>
+            </p>
         </div>
     </div>
 
@@ -33,7 +37,7 @@
         <div class="panel">
             <div class="flex flex-align-center">
                 <div class="flex-1 box main-color">
-                    糖腌米李 × <span>1</span>
+                    糖腌米李 × <span>1</span> 份
                 </div>
                 <div class="countBox">
                     <span>-</span>
@@ -44,7 +48,7 @@
         <div class="panel margin-top">
             <div class="flex">
                 <div class="flex-1 box main-color">
-                    糖腌杨梅 × <span>1</span>
+                    糖腌杨梅 × <span>1</span> 份
                 </div>
                 <div class="countBox">
                     <span>-</span>
@@ -55,7 +59,7 @@
         <div class="panel margin-top">
             <div class="flex">
                 <div class="flex-1 box main-color">
-                    薏米糖水 × <span>1</span>
+                    薏米糖水 × <span>1</span> 份
                 </div>
                 <div class="countBox">
                     <span>-</span>
@@ -64,12 +68,18 @@
             </div>
         </div>
 
+        <div class="panel margin-top">
+            <select name="id" class="select-box">
+                <option>选择优惠券</option>
+            </select>
+        </div>
+
         <div class="text-right" style="margin: 15px 0;">
             <div>总计：<span class="blank-text">￥36.00</span></div>
             <div class="small-text">（含配送费）</div>
         </div>
         <div class="margin-top">
-            <button class="main-btn">立即下单</button>
+            <a class="main-btn" href="myqueren.html">立即下单</a>
         </div>
     </div>
 
@@ -87,9 +97,9 @@
         <p>不用久等就为您送上清凉解暑</p>
         <img src="images/baixiangguo.jpg" width="100%">
         <img src="images/baixiangguo.jpg" width="100%">
-        <p>欢迎您下单</p>
+        <p>欢迎您品尝</p>
     </div>
 
-    <div class="bottom-tip">店多多，汇聚您身边的优惠</div>
+    <div class="bottom-tip">店多多，汇聚您身边的精彩</div>
 </body>
 </html>
