加入一些页面

--- a/Public/myqueren.html
+++ b/Public/myqueren.html
@@ -19,7 +19,7 @@
 <div class="inline-box">
 
     <div class="panel box margin-top">
-        <input class="input-box" type="tel" placeholder="为了方便配送，请填写电话号码">
+        <input class="input-box" type="tel" placeholder="为了方便配送，请填写手机号码">
     </div>
 
     <div class="panel box margin-top flex">
