--- a/Public/myorderdetail.html
+++ b/Public/myorderdetail.html
@@ -61,10 +61,10 @@
 
         <div class="row margin-top30">
             <div class="col-50">
-                <a class="main-btn disable" href="#">签收</a>
+                <a class="btn main-btn disable" href="#">签收</a>
             </div>
             <div class="col-50">
-                <a class="orange-btn" href="#">评论</a>
+                <a class="btn orange-btn" href="#">评论</a>
             </div>
         </div>
     </div>
